# pmm-content-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  _gotchas.md  main.py  pyproject.toml
_logs/: _flags.md
experts/: brunson-storytelling.md  garyvee-distribution.md  hormozi-offers.md  ogilvy-headlines.md  suby-leadgen.md
obsidian-brain/: CLAUDE.md
obsidian-brain/PMM Brain/: PMM Brain v3.0.md
references/: carousel-practices.md  format-adaptation-matrix.md  generation-angles.md  linkedin-practices.md  newsletter-practices.md  research-protocol.md  rubber-duck-escalator.md  twitter-practices.md  visual-design-framework.md
scripts/: create_obsidian_posts.py  fetch_missing_content.py  generate_workflow_visual.py
skills/: _index.md
skills/critique/: SKILL.md
skills/distribute/: SKILL.md
skills/expand/: SKILL.md
skills/generate/: SKILL.md
skills/ingest/: SKILL.md
skills/inspect-amend/: SKILL.md
skills/observe/: SKILL.md
skills/research/: SKILL.md
skills/scraper/: SKILL.md
skills/scraper/scripts/: scrape_beehiiv.py  (+1 more)
skills/ship/: SKILL.md
skills/showcase/: SKILL.md
skills/suggest-themes/: SKILL.md
skills/visual/: SKILL.md
src/brain/: brain_injector.py  brain_store.py
src/config/: linkedin_practices.py  settings.py
src/critique/: calibration.py
src/ingestion/: docx_parser.py  newsletter_scraper.py  url_scraper.py
src/orchestrator/: approval_loop.py
src/research/: domain_synthesizer.py
src/schemas/: __init__.py  content.py  critique.py  engagement.py  profile.py  research.py
src/storage/: database.py  models.py  vectors.py
(+71 files in other folders)
